--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>task_2</title>
+        <title>task_3</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="./styles/2-common.css">
         <link rel="stylesheet" href="./styles/2-footer.css">
         <link rel="stylesheet" href="./styles/2-header.css">
+        <link rel="icon" type="image/icon" href="images/icon.png">
     </head>
     <body>
         <header>
+            <img class="logo" src="./images/logo.png" alt="logo of holberton at header">
         </header>
         <footer >
             <p class="footer">Best School</p>
